# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a swagger for the API that was developed as a core platform of the BUILDSPACE project.\n**Note** that the **X-Group-Id** is a header that is required in all the enpoints.",
+        "description": "This is a swagger for the API that was developed as a core platform of the BUILDSPACE project.\n**Note** that the **GroupId** apikey is not realy an api key, but a header. Specifically, pass the Group ID in that field in order to get authorized.",
         "title": "BUILSPACE Core Platform Swagger API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
@@ -21,6 +21,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "GroupId": []
                     }
                 ],
                 "description": "Use a Bucket model to create a new bucket.",
@@ -43,13 +46,6 @@
                         "schema": {
                             "$ref": "#/definitions/models.Bucket"
                         }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Group ID",
-                        "name": "X-Group-Id",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -79,6 +75,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "GroupId": []
                     }
                 ],
                 "description": "Delete a bucket based on it's ID.",
@@ -98,13 +97,6 @@
                         "description": "Bucket Id",
                         "name": "id",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Group ID",
-                        "name": "X-Group-Id",
-                        "in": "header",
                         "required": true
                     }
                 ],
@@ -135,6 +127,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "GroupId": []
                     }
                 ],
                 "description": "This is the endopoint to update file meta data. Pass a models.File of the file that will be updated with the updates included.\n**Note** that this endpoint updates the meta data and not the file contents. To update file contents user must delete int and re-upload it.",
@@ -157,13 +152,6 @@
                         "schema": {
                             "$ref": "#/definitions/models.File"
                         }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Group ID",
-                        "name": "X-Group-Id",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -203,6 +191,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "GroupId": []
                     }
                 ],
                 "description": "This is the endopoint to upload files. The files are uploaded using a multipart streaming upload.\nStep 1 is to select the content-type.\n- If **application/json** then the request will be sent to initialize the multipart upload. In this case user must pass a **File model as a payload** containing the **folder** and the **original_title** fields. User must also pass the **total** header to specify the number of parts that will be uploaded.\n- If **application/octet-stream** user must pass the **binary data** (decoded) in the body and also provide the **file ID** and part number parameters.",
@@ -244,13 +235,6 @@
                         "description": "Number of part",
                         "name": "part",
                         "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Group ID",
-                        "name": "X-Group-Id",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -292,6 +276,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "GroupId": []
                     }
                 ],
                 "description": "This is the endopoint to get files. The files are downloaded using a **multipart streaming download**.\nUser provies the file id as well as the part number and receives the decoded and decrypted bytes/",
@@ -316,13 +303,6 @@
                         "name": "part",
                         "in": "query",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Group ID",
-                        "name": "X-Group-Id",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -344,6 +324,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "GroupId": []
                     }
                 ],
                 "description": "This is the endopoint to delete files. The files are deleted based on ther id.",
@@ -360,13 +343,6 @@
                         "description": "File ID",
                         "name": "id",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Group ID",
-                        "name": "X-Group-Id",
-                        "in": "header",
                         "required": true
                     }
                 ],
@@ -391,6 +367,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "GroupId": []
                     }
                 ],
                 "description": "Get a folders meta data by the ID. Pass the ID in a query parameter.",
@@ -410,13 +389,6 @@
                         "description": "Folder ID",
                         "name": "id",
                         "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Group ID",
-                        "name": "X-Group-Id",
-                        "in": "header",
                         "required": true
                     }
                 ],
@@ -457,6 +429,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "GroupId": []
                     }
                 ],
                 "description": "Update a folders meta data by the ID. Pass the Folder model with the updates that are needed.",
@@ -479,13 +454,6 @@
                         "schema": {
                             "$ref": "#/definitions/models.Folder"
                         }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Group ID",
-                        "name": "X-Group-Id",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -525,6 +493,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "GroupId": []
                     }
                 ],
                 "description": "Use a Folder model as a payload to create a new folder. Essential fields are meta.title (folder's name) and parent (location).",
@@ -547,13 +518,6 @@
                         "schema": {
                             "$ref": "#/definitions/models.Folder"
                         }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Group ID",
-                        "name": "X-Group-Id",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -589,6 +553,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "GroupId": []
                     }
                 ],
                 "description": "Get lists of files and folders in a specific folder, by id. Result is a FolderList model",
@@ -608,13 +575,6 @@
                         "description": "Folder ID",
                         "name": "id",
                         "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Group ID",
-                        "name": "X-Group-Id",
-                        "in": "header",
                         "required": true
                     }
                 ],
@@ -645,6 +605,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "GroupId": []
                     }
                 ],
                 "description": "Pass folder's id to delete it. Nested items (either files or folders) will be deleted as well.",
@@ -664,13 +627,6 @@
                         "description": "Folder payload",
                         "name": "id",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Group ID",
-                        "name": "X-Group-Id",
-                        "in": "header",
                         "required": true
                     }
                 ],
@@ -713,6 +669,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "GroupId": []
                     }
                 ],
                 "description": "Returns the metadata of a file by it's ID.",
@@ -729,13 +688,6 @@
                         "description": "File ID",
                         "name": "id",
                         "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Group ID",
-                        "name": "X-Group-Id",
-                        "in": "header",
                         "required": true
                     }
                 ],
@@ -959,6 +911,11 @@
         "BearerAuth": {
             "type": "apiKey",
             "name": "Authorization",
+            "in": "header"
+        },
+        "GroupId": {
+            "type": "apiKey",
+            "name": "X-Group-Id",
             "in": "header"
         }
     }
